Sat Jun 28 16:14:38 1997  Sumedh Mungee  <sumedh@cumbia.cs.wustl.edu>

	* HTTP_Handler.cpp (open): Changed socket send-buffer to 64k

Wed Jun 25 01:11:50 1997  Nanbor Wang  <nw1@dingo.wolfpack.cs.wustl.edu>

	* JAWS_File.cpp: Removed initialization of vfs_ (see below) and
	  changed all references of vfs_ to
	  JAWS_Virtual_Filesystem::instance ().  Thanks to Detlef Becker
	  <detlef.becker@med.siemens.de> for pointing this out.
	  (init): Added initialization of reference_count_ to 0.

	* JAWS_File.h: Removed private member JAWS_Virtual_Filesystem vfs_
	  since JAWS_Virtual_Filesystem is a singleton already.  Caching
	  it doesn't seem to win much and depends on the order of static
	  variables initialization, which is non-portable.

Fri Jun 13 02:42:39 1997  Nanbor Wang  <nw1@dingo.wolfpack.cs.wustl.edu>

	* jaws.{mdp,mak}: Updated to incoporate latest changes.

Thu Jun  5 14:13:22 1997  James C Hu  <jxh@lambada.cs.wustl.edu>

	* HTTP_Server.cpp: Added more informative comments to the
	  asynch_thread_pool() method due to comments posed by Mehul
	  (MehulM@spa-marketing.com).

Wed Jun  4 23:00:47 1997  James C Hu  <jxh@lambada.cs.wustl.edu>

	* JAWS_File.cpp (JAWS_File): Fixed a bug where JAWS_File wanted
	  the file to have write permissions before openning it.  This is
	  now only true if the file is to be written to.

Wed Jun  4 22:30:41 1997  Nanbor Wang  <nw1@dingo.wolfpack.cs.wustl.edu>

	* main.cpp (main): Changed SIGCLD to SIGCHLD for better
	  portability.

	* IO.cpp (transmit_file): The third argument passed
	  ACE_Asynch_Transmit_File::Header_And_Trailer() should be an
	  address (&).  

Mon Jun  2 16:35:18 1997  James C Hu  <jxh@lambada.cs.wustl.edu>

	* HTTP_Helpers.cpp: Serious bug in base64 decoder routine
 	  squashed.  Didn't initialize an array with 0's.  The original
 	  source had them declared static.  Also, changed sizeof alphabet_
 	  to strlen (alphabet_), because original code had alphabet_ as an