@@ -5,6 +5,6 @@
 #	= 1 -> thread per request
 #	= 2 -> asynch thread pool
 #
-static HTTP_Server "HTTP_Server -p 5432 -n 10 -s 0"
+static HTTP_Server "HTTP_Server -p 9999 -n 35 -s 0"
 #dynamic HTTP_Server Service_Object * .shobj/HTTP_Server:jaws "HTTP_Server -p 5432 -s HTTP_Service"
 
